--- a/enterprise_software/invoice_template/templates/invoice_template/invoice_template.html
+++ b/enterprise_software/invoice_template/templates/invoice_template/invoice_template.html
@@ -5,22 +5,22 @@
     <title>Invoice preview</title>
     <style>
 		@page { size: {{config.page_width}}; margin: {{config.page_margins}};}
-		@media print { body { width: {{config.page_width}} } } /* this line is needed for fixing Chrome's bug */
+		@media print { body { width: {{config.page_width}}; }} /* this line is needed for fixing Chrome's bug */
 	</style>
 	<style type="text/css">
-		table,body { font-size:9px; }
-		p {margin:0;}
+		table,body { font-size:{{config.font_size}}; }
+		p {margin:0px;}
 	</style>
 </head>
 <body>
-    <div style="width:{{config.page_width}}">
+    <div style="width:{{config.page_width}};">
         <center>
-            <img src="{% static 'invoice_template/invoice_title.png' %}" alt="Logo" width=95%>
+            <img src="{% static 'invoice_template/invoice_title.png' %}" alt="Logo" style="width:95%">
             <p> Address: {{config.shop_address}} </p>
             <p> Contact: {{config.shop_contact}} </p>
             <p> {{config.separation_line}} </p>
 
-            <table width=90% cellspacing=2px>
+            <table style="width:90%">
                 {% for item_row in config.available_items %}
                     <tr align="center">
                     {% for item in item_row %}
@@ -31,7 +31,7 @@
 		    </table>
             <p> {{config.separation_line}} </p>
 
-            <table width=90%>
+            <table style="width:90%">
                 <tr>
                     <td style="text-align:left">Customer Name: {{bill_info.customer_name}}</td>
                     <td style="text-align:right">Invoice No: {{bill_info.invoice_id}}</td>
@@ -44,9 +44,9 @@
 
             <br>
 
-            <table width=90% cellpadding=0>
+            <table style="width:90%" cellpadding=0>
                 <tr>
-                    <th style="text-align:left" width=35%>Item</th>
+                    <th style="text-align:left;width:35%">Item</th>
                     <th>Unit Price</th>
                     <th>Qty</th>
                     <th style="text-align:right">Amount</th>
